unpackaged/main/default/objects/Fee__c/fields/Semester_Fees__c.field-meta.xml
<CustomField>
    <fullName>Semester_Fees__c</fullName>
    <formula>CASE(
   Stream_Name__c,
   &#39;Engineering&#39;, 300000,
   &#39;Medical&#39;, 
      CASE(
         Department__c,
         &#39;MBBS&#39;, 500000,
         &#39;MD&#39;, 350000,
         &#39;PharmD&#39;, 250000,
         &#39;BDA&#39;, 250000,
         &#39;BSC-Nursing&#39;, 250000,
         0
      ),
   &#39;Bachelor of Arts (B.A.)&#39;, 200000,
   &#39;Bachelor of Commerce (B.Com.)&#39;, 200000,
   0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semester Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>