unpackaged/main/default/objects/Fee__c/fields/Student_Id__c.field-meta.xml
<CustomField>
    <fullName>Student_Id__c</fullName>
    <label>Student Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>